2010-07-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ZImage.cxx:
	* Glasses/ZImage.h:
	Add support for minifaction filters using mip-maps.

	* Rnr/GL/ZImage_GL_Rnr.cxx:
	Generate mip-maps automatically when needed.

2010-07-03  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/WSPoint.cxx:
	* Glasses/WSSeed.cxx:
	White-space changes.

2010-06-11  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Rect.h:
	Increase weed precision of mU/VLen.

2010-05-26  Matevz Tadel  <matevz.tadel@ijs.si>

	Add support for per-triangle texture coordinates.

	* Stones/TringTvor.cxx:
	* Stones/TringTvor.h:
	Introduce mode enum (per-vertex, per-triangle) and use it for
	normals, color and texture.
	Modify constructors and Reset() functions to support that.
	Add functions for per-triangle texture handling.

	* Rnr/GL/TringTvor_GL_Rnr.cxx:
	* Rnr/GL/TringTvor_GL_Rnr.h:
	Restructure to support all possible per-vertex / per-triangle
	combinations of normal, color and texture rendering.
	The setup pass is now well structured (BeginSetup(), do stuff,
	EndSetup()) and the state is cached indata members.

	* Glasses/RectTerrain.cxx:
	Adapt for new TringTvor rendering.

2010-04-06  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Amphitheatre.cxx:
	* Glasses/Amphitheatre.h:
	* Glasses/RectTerrain.h:
	* Glasses/WSTube.cxx:
	* Glasses/WSTube.h:
	* Rnr/GL/Amphitheatre_GL_Rnr.cxx:
	Replace usage of TVector3 with ZPoint.

2010-01-08  Matevz Tadel  <matevz.tadel@ijs.si>

	* Stones/TringTvor.cxx:
	Invalidate bbox on Reset() and when adding vertices/triangles.

2010-01-08  Matevz Tadel  <matevz.tadel@ijs.si>

	* Stones/TringTvor.cxx:
	* Stones/TringTvor.h:
	Cache half-diagonal of the bounding-box.
	Bounding-box diagonal getters are now inline.
	Improve const correctness.
	Add getters for min/max edge length.

2010-01-07  Matevz Tadel  <matevz.tadel@ijs.si>

	* Rnr/GL/TringTvor_GL_Rnr.cxx:
	* Rnr/GL/TringTvor_GL_Rnr.h:
	Add static function RenderCEBBox() (moved in from Extendio_GL_Rnr).
